--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,19 @@
     <string name="characters">Personajes</string>
     <string name="collectibles">Coleccionables</string>
     <string name="title_about">Acerca de</string>
-    <string name="text_about">Aplicación desarrollada por \n <b>Lindsay Barrero Martínez.</b></string>
+    <string name="text_about">Aplicación desarrollada por \n <b>Juan Antonio López.</b></string>
     <string name="accept">Aceptar</string>
+    <string name="exit_guide">Saltar guía</string>
+    <string name="info">Info</string>
+    <string name="bienvenido">Bienvenido</string>
+    <string name="texto1">Preparate para explorar el mundo mágico de:</string>
+    <string name="texto2">Pulsa sobre el botón de comenzar para iniciar la guia interactiva!!</string>
+    <string name="comenzar">Comenzar</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="siguiente">Siguiente</string>
+    <string name="texto_guia_personajes">Aquí podrás explorar a todos los personajes del mundo de Spyro.</string>
+    <string name="atras">Atrás</string>
+    <string name="texto_guia_mundos">Aquí podrás navegar a través de los mundos de Spyro</string>
+    <string name="texto_guia_coleccionables">Aquí encontraras los elementos coleccionables que podremos encontrar en el universo de Spyro</string>
+
 </resources>
